--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -2,7 +2,7 @@ server.port=8084
 #Database Configuration
 spring.datasource.url=jdbc:mysql://mysql/health-service?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=test1234
+spring.datasource.password=root
 
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
